# qcsc-prefect

algorithms/gb_sqd/: .gitignore  README.md  create_blocks.py  gb_sqd_blocks.example.toml  manual_bulk_test_commands.sh
algorithms/gb_sqd/docs/: bulk_submission_flow_design.md  bulk_submission_flow_runbook.md  bulk_submission_manual_test_plan.md  miyabi_bulk_rerun_runbook.md  task_splitting_design.md
algorithms/gb_sqd/gb_sqd/: __init__.py  _workspace_support.py  bulk.py  fugaku_queue.py  main.py  miyabi_queue.py  prefect_support.py
algorithms/sbd/: README.md
algorithms/skqd_z2lgt/: pyproject.toml
algorithms/skqd_z2lgt/notebooks/: full_workflow.ipynb
algorithms/skqd_z2lgt/notebooks/old/: recovery_learning.ipynb
algorithms/skqd_z2lgt/scripts/: run_experiment.py  run_plaquette_simulation.py  run_simulation.py
algorithms/skqd_z2lgt/scripts/prefect/: main.py
algorithms/skqd_z2lgt/scripts/tasks/: data.py  experiment.py  skqd_random.py  skqd_raw.py  skqd_recovery.py  train_crbm.py
algorithms/skqd_z2lgt/scripts/workflow/: data.py  dmrg.py  experiment.py  skqd_random.py  skqd_raw.py  skqd_recovery.py  train_crbm.py
algorithms/skqd_z2lgt/skqd_z2lgt/: circuits.py  crbm.py  extensions.py  ising_dmrg.py  main.py  mwpm.py  parameters.py  pauli.py  recovery_learning.py  sqd.py  train_crbm.py  utils.py
algorithms/skqd_z2lgt/skqd_z2lgt/_julia/: ising_dmrg.jl  mps_sparsity.jl
algorithms/skqd_z2lgt/skqd_z2lgt/tasks/: diagonalize.py  dmrg.py  open_output.py  preprocess.py  sample_quantum.py  train_generator.py
algorithms/sqd/: README.md  pyproject.toml
(+15 files in other folders)
