[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skqd_z2lgt"
version = "0.0.1"
authors = []
description = "QCHPC demonstration with 2D Z2 LGT."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "jax[cuda12]",
    "optax",
    "orbax-checkpoint",
    "flax",
    "qiskit>=2.1.0",
    "qiskit_aer-gpu-cu11>=0.17.0",
    "qiskit-ibm-runtime>=0.41.0",
    "qiskit-addon-sqd",
    "rustworkx",
    "pymatching",
    "heavyhex_qft",
]

[tool.uv.sources]
heavyhex_qft = { path = "../../libs/heavyhex-qft", editable = true }
